--- a/index.htm
+++ b/index.htm
@@ -23,6 +23,20 @@
   <script src="./library/bootgrid/jquery.bootgrid.fa.js"></script>
   <link href="./library/bootgrid/jquery.bootgrid.css" rel="stylesheet">
 
+  <!--Library FullCalendar-->
+  <!--<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js"></script>
+  <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css" rel="stylesheet">
+  <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css" rel="stylesheet">-->
+
+  <!--<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.2/moment.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.1.1/fullcalendar.min.js"></script>-->
+
+  <script src="./library/fullCalendar/fullcalendar.js"></script>
+  <link href="./library/fullCalendar/fullcalendar.css" rel="stylesheet">
+  <link href="./library/fullCalendar/fullcalendar.print.css" rel="stylesheet">
+
+
   <link href="./library/bootstrap-responsive.css" rel="stylesheet">
   <!--Override CSS-->
   <!--    <link href="./css/bootstrap.css" rel="stylesheet">-->
