Update add class

--- a/html/contact.html
+++ b/html/contact.html
@@ -16,10 +16,10 @@
     <br>
     <div class="label-header">ติดต่อเรา</div>
     <br>
+    <html lang="en">
+<body>
 </body>
-<script>
-
-
-</script>
+<script >
+  </script>
 
 </html>
