--- a/html/studentprofile.1.html
+++ b/html/studentprofile.1.html
@@ -72,9 +72,9 @@
                         <div class="col-lg-6"></div>
                     </div>
                     <div class="form-group required">
-                        <label for="dropdownLevel" class="col-lg-2 labelform">ระดับชั้น</label>
+                        <label for="txtLevel" class="col-lg-2 labelform">ระดับชั้น</label>
                         <div class="col-lg-4">
-                            <select class="custom-select" id="dropdownLevel" required></select>
+                            <input type="text" class="form-control" id="txtLevel">
                         </div>
                         <div class="col-lg-6"></div>
                     </div>
@@ -90,12 +90,67 @@
         </div>
     </div>
     <br>
+    <div class="label-header">เวลาว่างของนักเรียน</div>
+    <button id="btnAddStuTime" type="button" class="btn btn-primary container-btn-add-right" data-toggle="modal" data-target="#modalStuTime">
+        เพิ่ม
+    </button>
+
+    <table id="gridStuTime" class="table table-condensed table-hover table-striped scroll">
+        <thead>
+            <tr>
+                <th data-column-id="id" data-identifier="true" data-type="numeric" data-width="5%">#</th>
+                <th data-column-id="day" data-width="10%">วัน</th>
+                <th data-column-id="startTime" data-width="20%">เวลาเริ่ม</th>
+                <th data-column-id="endTime" data-width="20%">เวลาสิ้นสุด</th>
+                <th data-column-id="location" data-width="35%">สถานที่เรียน</th>
+                <th data-column-id="action" data-sortable="false" data-searchable="false" data-width="10%">Action</th>
+            </tr>
+        </thead>
+    </table>
+    <br>
+    <div class="label-header">ปัจจัยที่ใช้ในการคัดเลือกติวเตอร์</div>
+    <br>
     <div class="container-fluid">
         <div class="row">
             <div class="form-group col-lg-12">
+                <div class="col-lg-7">
+                    <table class="table table-bordered pagin-table">
+                        <thead>
+                            <tr>
+                                <th width="50px">#</th>
+                                <th>ปัจจัย</th>
+                            </tr>
+                        </thead>
+                        <tbody id="sort-table">
+                            <tr>
+                                <td>1</td>
+                                <td>เพศของติวเตอร์</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>สถาบันของติวเตอร์</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>คณะของติวเตอร์</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>ประสบการณ์ของติวเตอร์</td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>คะแนนประเมินของติวเตอร์</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-lg-5"></div>
+            </div>
+            <div class="form-group col-lg-12">
                 <div class="col-lg-4"></div>
                 <div class="col-lg-4">
-                    <button type="button" class="btn btn-primary" id="btnUpdateStudentProfile">บันทึก</button>
+                    <button type="button" class="btn btn-primary" id="btnUpdateProfile">บันทึก</button>
                     <button type="button" class="btn btn-secondary" href="javascript:loadMainPage();">ยกเลิก</button>
                 </div>
                 <div class="col-lg-4"></div>
@@ -112,112 +167,16 @@
     for (var i = 0; i < dataSex.length; i++) {
         $('#dropdownSex').append('<option value="' + dataSex[i].val + '">' + dataSex[i].name + '</option>');
     }
-
-    var dataLevel = [{
-        name: "อนุบาลศึกษาปีที่ 1", val: "1"
-    }, {
-        name: "อนุบาลศึกษาปีที่ 2", val: "2"
-    }, {
-        name: "อนุบาลศึกษาปีที่ 3", val: "3"
-    }, {
-        name: "ประถมศึกษาปีที่ 1", val: "4"
-    }, {
-        name: "ประถมศึกษาปีที่ 2", val: "5"
-    }, {
-        name: "ประถมศึกษาปีที่ 3", val: "6"
-    }, {
-        name: "ประถมศึกษาปีที่ 4", val: "7"
-    }, {
-        name: "ประถมศึกษาปีที่ 5", val: "8"
-    }, {
-        name: "ประถมศึกษาปีที่ 6", val: "9"
-    }, {
-        name: "มัธยมศึกษาปีที่ 1", val: "10"
-    }, {
-        name: "มัธยมศึกษาปีที่ 2", val: "11"
-    }, {
-        name: "มัธยมศึกษาปีที่ 3", val: "12"
-    }, {
-        name: "มัธยมศึกษาปีที่ 4", val: "13"
-    }, {
-        name: "มัธยมศึกษาปีที่ 5", val: "14"
-    }, {
-        name: "มัธยมศึกษาปีที่ 6", val: "15"
-    }, {
-        name: "ระดับปริญญาตรี", val: "15"
-    }];
-    for (var i = 0; i < dataLevel.length; i++) {
-        $('#dropdownLevel').append('<option value="' + dataLevel[i].val + '">' + dataLevel[i].name + '</option>');
-    }
     $('#sort-table').sortable();
+    $("#btnUpdateProfile").on("click", function (e) {
+        // create new class
+        var row1 = $('#sort-table tr:nth-child(1) td:nth-child(1)').text();
+        var row2 = $('#sort-table tr:nth-child(2) td:nth-child(1)').text();
+        var row3 = $('#sort-table tr:nth-child(3) td:nth-child(1)').text();
+        var row4 = $('#sort-table tr:nth-child(4) td:nth-child(1)').text();
+        var row5 = $('#sort-table tr:nth-child(5) td:nth-child(1)').text();
+        var tutorSpecOrder = [row1, row2, row3, row4, row5];
 
-    jQuery(document).ready(function () {
-        $('#txtEmail').val(_gUserEmail);
-        initialStudentProfile();
-    });
-
-
-    function initialStudentProfile() {
-
-        $.ajax({
-            type: "GET",
-            url: _gServiceURL + "student/getprofile/" + _gUser.stuId,
-            contentType: "application/json; charset=utf-8",
-            crossDomain: true,
-            dataType: "json",
-            success: function (data, status, jqXHR) {
-                var student = data.data.student;
-                console.log(student);
-                $('#txtFirstName').val(student.stuFirstname);
-                $('#txtLastName').val(student.stuLastname);
-                $('#txtNickname').val(student.stuNickname);
-                $('#txtTel').val(student.stuPhonenum);
-                $('#txtSchool').val(student.stuSchool);
-                $('#dropdownSex').val(student.stuSex);
-                $('#dropdownLevel').val(student.stuLevel);
-            },
-            error: function (jqXHR, status) {
-            }
-
-        });
-    }
-    $("#btnUpdateStudentProfile").on("click", function (e) {
-        var txtFirstName = $('#txtFirstName').val();
-        var txtLastName = $('#txtLastName').val();
-        var txtNickname = $('#txtNickname').val();
-        var txtTel = $('#txtTel').val();
-        var sex = $('#dropdownSex option:selected').val();
-        var level = $('#dropdownLevel option:selected').val();
-        var school = $('#txtSchool').val();
-
-        var bodyRequest = {
-            stuId: parseInt(_gUser.stuId),
-            stuFirstname: txtFirstName,
-            stuLastname: txtLastName,
-            stuNickname: txtNickname,
-            stuPhonenum: txtTel,
-            stuSex: sex,
-            stuLevel: parseInt(level),
-            stuSchool : school
-        };
-        console.log(bodyRequest);
-        $.ajax({
-            type: "POST",
-            url: _gServiceURL + "student/updateprofile",
-            contentType: "application/json; charset=utf-8",
-            data: JSON.stringify(bodyRequest),
-            crossDomain: true,
-            dataType: "json",
-            success: function (data, status, jqXHR) {
-                $(".alert-success").show();
-                $('html, body').animate({ scrollTop: $('.breadcrumb').offset().top }, 'fast');
-            },
-            error: function (jqXHR, status) {
-                $(".alert-danger").show();
-                $('html, body').animate({ scrollTop: $('.breadcrumb').offset().top }, 'fast');
-            }
-
-        });
     });
 </script>
 
