--- a/html/login.html
+++ b/html/login.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container login-container">
+    <div class="container login-container" style="margin-top: 30px;">
         <ul class="nav nav-tabs" id="loginTabs">
             <li class="nav-item active">
                 <a data-toggle="tab" href="#home" tabindex="0">นักเรียนหรือผู้ปกครอง&nbsp;&nbsp;
@@ -22,6 +22,7 @@
                 <a data-toggle="tab" href="#profile" tabindex="1">ติวเตอร์</a>
             </li>
         </ul>
+        <br>
         <div class="tab-content" id="myTabContent">
             <div class="form-group">
                 <label for="txtLoginEmail">E-mail Address</label>
