--- a/html/registertutor.html
+++ b/html/registertutor.html
@@ -12,7 +12,7 @@
             <li class="breadcrumb-item">
                 <a href="#">หน้าหลัก</a>
             </li>
-            <li class="breadcrumb-item active">สมัครติวเตอร์</li>
+            <li class="breadcrumb-item active">สมัครสมาชิกติวเตอร์</li>
         </ol>
     </div>
     <br>
@@ -24,7 +24,7 @@
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <strong>ไม่สามารถบันทึกข้อมูลได้</strong>
     </div>
-    <div class="label-header">สมัครติวเตอร์</div>
+    <div class="label-header">สมัครสมาชิกติวเตอร์</div>
     <br>
     <ul class="nav nav-tabs">
         <li class="nav-item active">
@@ -500,128 +500,7 @@
             $('#dropdownExp').append('<option value="' + dataExp[i].val + '">' + dataExp[i].name + '</option>');
         }
 
-        //day
-        var dataDay = [{
-            name: "จันทร์", val: "1"
-        }, {
-            name: "อังคาร", val: "2"
-        }, {
-            name: "พุธ", val: "3"
-        }, {
-            name: "พฤหัสบดี", val: "4"
-        }, {
-            name: "ศุกร์", val: "5"
-        }, {
-            name: "เสาร์", val: "6"
-        }, {
-            name: "อาทิตย์", val: "7"
-        }];
-        /*
-        for (var i = 0; i < dataDay.length; i++) {
-            $('#dropdownCopyFromDay').append('<option value="' + dataDay[i].val + '">' + dataDay[i].name + '</option>');
-            $('#dropdownJobDetailDay').append('<option value="' + dataDay[i].val + '">' + dataDay[i].name + '</option>');
-        }*/
-
-        //time
-        var dataTime = [{
-            name: "8.00 น.", val: "8"
-        }, {
-            name: "8.15 น.", val: "8.15"
-        }, {
-            name: "8.30 น.", val: "8.3"
-        }, {
-            name: "8.45 น.", val: "8.45"
-        }, {
-            name: "9.00 น.", val: "9"
-        }, {
-            name: "9.15 น.", val: "9.15"
-        }, {
-            name: "9.30 น.", val: "9.3"
-        }, {
-            name: "9.45 น.", val: "9.45"
-        }, {
-            name: "10.00 น.", val: "10"
-        }, {
-            name: "10.15 น.", val: "10.15"
-        }, {
-            name: "10.30 น.", val: "10.3"
-        }, {
-            name: "10.45 น.", val: "10.45"
-        }, {
-            name: "11.00 น.", val: "11"
-        }, {
-            name: "11.15 น.", val: "11.15"
-        }, {
-            name: "11.30 น.", val: "11.3"
-        }, {
-            name: "11.45 น.", val: "11.45"
-        }, {
-            name: "12.00 น.", val: "12"
-        }, {
-            name: "12.15 น.", val: "12.15"
-        }, {
-            name: "12.30 น.", val: "12.3"
-        }, {
-            name: "12.45 น.", val: "12.45"
-        }, {
-            name: "13.00 น.", val: "13"
-        }, {
-            name: "13.15 น.", val: "13.15"
-        }, {
-            name: "13.30 น.", val: "13.3"
-        }, {
-            name: "13.45 น.", val: "13.45"
-        }, {
-            name: "14.00 น.", val: "14"
-        }, {
-            name: "14.15 น.", val: "14.15"
-        }, {
-            name: "14.30 น.", val: "14.3"
-        }, {
-            name: "14.45 น.", val: "14.45"
-        }, {
-            name: "15.00 น.", val: "15"
-        }, {
-            name: "15.15 น.", val: "15.15"
-        }, {
-            name: "15.30 น.", val: "15.3"
-        }, {
-            name: "15.45 น.", val: "15.45"
-        }, {
-            name: "16.00 น.", val: "16"
-        }, {
-            name: "16.15 น.", val: "16.15"
-        }, {
-            name: "16.30 น.", val: "16.3"
-        }, {
-            name: "16.45 น.", val: "16.45"
-        }, {
-            name: "17.00 น.", val: "17"
-        }, {
-            name: "17.15 น.", val: "17.15"
-        }, {
-            name: "17.30 น.", val: "17.3"
-        }, {
-            name: "17.45 น.", val: "17.45"
-        }, {
-            name: "18.00 น.", val: "18"
-        }, {
-            name: "18.15 น.", val: "18.15"
-        }, {
-            name: "18.30 น.", val: "18.3"
-        }, {
-            name: "18.45 น.", val: "18.45"
-        }, {
-            name: "19.00 น.", val: "19"
-        }, {
-            name: "19.15 น.", val: "19.15"
-        }, {
-            name: "19.30 น.", val: "19.3"
-        }, {
-            name: "19.45 น.", val: "19.45"
-        }, {
-            name: "20.00 น.", val: "20"
-        }];
+ 
         for (var i = 0; i < dataTime.length; i++) {
             $('#dropdownJobDetailStartTime').append('<option value="' + dataTime[i].val + '">' + dataTime[i].name + '</option>');
             $('#dropdownJobDetailEndTime').append('<option value="' + dataTime[i].val + '">' + dataTime[i].name + '</option>');
@@ -637,26 +516,6 @@
                 addApplyDayList();
             });
         });
-/*
-        function onloadtable() {
-            var $table = $('table.scroll'),
-                $bodyCells = $table.find('tbody tr:first').children(),
-                colWidth;
-
-            // Adjust the width of thead cells when window resizes
-            $(window).resize(function () {
-                // Get the tbody columns width array
-                colWidth = $bodyCells.map(function () {
-                    return $(this).width();
-                }).get();
-
-                // Set the width of thead columns
-                $table.find('thead tr').children().each(function (i, v) {
-                    $(v).width(colWidth[i]);
-                });
-            }).resize();
-
-        }*/ 
 
         function initialData() {
             console.log('initial data');
