--- a/index.htm
+++ b/index.htm
@@ -189,6 +189,39 @@
     }, {
       name: "20.00 น.", val: "20"
     }];
+    dataLevel = [{
+        name: "อนุบาลศึกษาปีที่ 1", val: "1"
+    }, {
+        name: "อนุบาลศึกษาปีที่ 2", val: "2"
+    }, {
+        name: "อนุบาลศึกษาปีที่ 3", val: "3"
+    }, {
+        name: "ประถมศึกษาปีที่ 1", val: "4"
+    }, {
+        name: "ประถมศึกษาปีที่ 2", val: "5"
+    }, {
+        name: "ประถมศึกษาปีที่ 3", val: "6"
+    }, {
+        name: "ประถมศึกษาปีที่ 4", val: "7"
+    }, {
+        name: "ประถมศึกษาปีที่ 5", val: "8"
+    }, {
+        name: "ประถมศึกษาปีที่ 6", val: "9"
+    }, {
+        name: "มัธยมศึกษาปีที่ 1", val: "10"
+    }, {
+        name: "มัธยมศึกษาปีที่ 2", val: "11"
+    }, {
+        name: "มัธยมศึกษาปีที่ 3", val: "12"
+    }, {
+        name: "มัธยมศึกษาปีที่ 4", val: "13"
+    }, {
+        name: "มัธยมศึกษาปีที่ 5", val: "14"
+    }, {
+        name: "มัธยมศึกษาปีที่ 6", val: "15"
+    }, {
+        name: "ระดับปริญญาตรี", val: "15"
+    }];
   </script>
 </head>
 
@@ -205,7 +238,7 @@
             <a class="nav-link" href="javascript:changePage('./html/registerClass.html');">สมัครเรียน</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="javascript:changePage('./html/registertutor.html');">สมัครติวเตอร์</a>
+            <a class="nav-link" href="javascript:changePage('./html/registertutor.html');">สมัครสมาชิกติวเตอร์</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="javascript:changePage('./html/contact.html');">ติดต่อเรา</a>
@@ -280,7 +313,7 @@
     jQuery(document).ready(function () {
       console.log("ready!");
       if (_gUser.turId == null) {
-        jQuery("#divMainContainer").load('./html/rate.html');
+        jQuery("#divMainContainer").load('./html/promote.html');
       }
       else {
         loadMainPage();
@@ -420,7 +453,7 @@
 
     function logout() {
       //_gUserEmail = null;
-      jQuery("#divMainContainer").load('./html/rate.html');
+      jQuery("#divMainContainer").load('./html/promote.html');
       jQuery("#divMainNavBar").css('display', 'none');
       jQuery("#divFirstNavBar").css('display', '');
       _gUserType = 'student';
