Recommend class detail - map issue

--- a/html/login.html
+++ b/html/login.html
@@ -39,7 +39,7 @@
         $(document).ready(function () {
             // The on tab shown event
             _gUserType = 'student';
-            jQuery("#txtLoginEmail").val('student1@gmail.com');
+            jQuery("#txtLoginEmail").val('tutor1@gmail.com');
             jQuery("#txtLoginPassword").val('1234');
             $('.nav-tabs a').on('shown.bs.tab', function (e) {
                 var tabIndex = parseInt(e.currentTarget.tabIndex);
