--- a/html/schedule.html
+++ b/html/schedule.html
@@ -214,11 +214,22 @@
 </style>
 </head>
 <body>
-<div id='wrap'>
+	<div>
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item">
+				<a href="#">หน้าหลัก</a>
+			</li>
+			<li class="breadcrumb-item active">ตารางสอน</li>
+		</ol>
+	</div>
+	<br>
+	<div class="label-header">ตารางสอน</div>
+	<div id='wrap'>
 
-<div id='calendar'></div>
+		<div id='calendar'></div>
 
-<div style='clear:both'></div>
-</div>
+		<div style='clear:both'></div>
+	</div>
 </body>
+
 </html>
