--- a/index.htm
+++ b/index.htm
@@ -341,6 +341,7 @@
     }
 
     function tutorLogin(data) {
+      console.log("tutor login");
       $.ajax({
         type: "POST",
         url: _gServiceURL + "tutor/login",
